--- a/adminapp/templates/admin_base.html
+++ b/adminapp/templates/admin_base.html
@@ -109,7 +109,7 @@
                 {% endblock %}
             </div>
             <div class="d-flex align-items-center">
-                <img src="{% static 'img/admin_avatar.png' %}" alt="Admin" class="rounded-circle me-2" width="40" height="40">
+                <img src="#" alt="Admin" class="rounded-circle me-2" width="40" height="40">
                 <span class="fw-semibold">{{ request.user.username }}</span>
             </div>
         </div>
@@ -125,6 +125,7 @@
         {% endif %}
         {% block content %}{% endblock %}
     </div>
+    {% block form_media %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_js %}{% endblock %}
 </body>
