--- a/adminapp/templates/admin_create_post.html
+++ b/adminapp/templates/admin_create_post.html
@@ -22,6 +22,9 @@
                         {{ form.featured_image.label_tag }}{{ form.featured_image }}
                     </div>
                     <div class="mb-3">
+                        {{ form.attachements.label_tag }}{{ form.attachements }}
+                    </div>
+                    <div class="mb-3">
                         {{ form.content.label_tag }}{{ form.content }}  {# CKEditor will appear here #}
                     </div>
  
